PhD Proposal Sunday Part 01

--- a/PhDProposal 01/Chp1-Intro/Intro.tex
+++ b/PhDProposal 01/Chp1-Intro/Intro.tex
@@ -3,7 +3,8 @@
 \section{The ocean, phytoplankton and why it matters}
 The complexity of the ocean and its vast ecosystems has fascinated scientists to this day and most likely will continue to do so far into the future. Myriad life forms are embedded in a matrix so far removed from our mostly dry existence on top the earth’s crust. In the ocean, life moves in dilution, and the equivalents of forests and grasslands are hard to spot unless the concentration of tiny phytoplankton is so large, that deep blue turns into a milky green.
 
-The term phytoplankton refers to microscopic marine photosynthetic organisms. These microorganisms form the basis of the oceanic food web and are primary producers of planetary scale, contributing roughly half of the oxygen in our atmosphere through photosynthesis (Field et al. 1998). Phytoplankton consists of mostly single-celled organisms, prokaryotes and eukaryotes from a highly diverse evolutionary background. (cite FALKOWSKI?) 
+The term phytoplankton refers to microscopic marine photosynthetic organisms. These microorganisms form the basis of the oceanic food web and are primary producers of planetary scale, contributing roughly half of the oxygen in our atmosphere through photosynthesis \citep{Field2009}. Phytoplankton consists of mostly single-celled organisms, prokaryotes and eukaryotes from a highly diverse evolutionary background \citep{Falkowski2004a}.
+
 The distribution of phytoplankton is driven by the complex physical and chemical boundary conditions that govern ocean currents and upwelling systems, with the key component being macronutrients (e.g. nitrogen \& phosphorus) and micronutrients (e.g. iron \& cobalt) brought up from the deep ocean or flushed in through river estuaries. 
 
 Wherever there are plenty of nutrients and light, planktonic life begins to thrive. The biomass produced indirectly feeds a considerable part of earth’s population through fisheries (Stock et al. 2017) and even shapes the elemental composition of oceanic water itself (Redfield 1958). 
@@ -32,6 +33,12 @@ Obviously bulk properties also have to be taken from specific depth
 so this adds the problem of the complexity of the physical environment that is the ocean, with enormous volume, turbulunce/mixing, diffusion and absorbance
 
 I want to look at phytoplankton diversity, particularly from a functional type point of view. Quantify diversity as it relates to ecosystem function (as production for example).
+
+
+"Moreover, major taxonomic groups of eukaryotic phyto- plankton can be classified into distinct functional groups (Iglesias-Rodriguez et al. 2002a) with unique biogeochemical signatures. Here, we combine the trait-based approach with the taxonomic ⁄phylogenetic information by broadly sam- pling relevant traits across major taxonomic groups of marine phytoplankton to gain new insights into the effects of evolutionary history on the physiological trait distribu- tions and community structure. An important aspect of a trait-based approach to
+"community ecology is the trade-offs between traits (Tilman 1990; Grover 1991; Bohannan et al. 2002). When compe- tition for multiple resources is considered, species are thought to have trade-offs in their competitive ability for one vs. another nutrient (Tilman 1982) or for nutrient vs. light (Huisman & Weissing 1994; Leibold 1997; Klausme- ier & Litchman 2001). Under non-equilibrium conditions, a trade-off between competitive ability and maximum growth rate may
+Litchman, E., Klausmeier, C. A., Schofield, O. M., & Falkowski, P. G. (2007). The role of functional traits and trade-offs in structuring phytoplankton communities: Scaling from cellular to ecosystem level. Ecology Letters, 10(12), 1170–1181. https://doi.org/10.1111/j.1461-0248.2007.01117.x
+
 
 XXX
 
