--- a/PhDProposal 01/proposal.bib
+++ b/PhDProposal 01/proposal.bib
@@ -1,3 +1,36 @@
+@article{Falkowski2004a,
+abstract = {The community structure and ecological function of contemporary marine ecosystems are critically dependent on eukaryotic phytoplankton. Although numerically inferior to cyanobacteria, these organisms are responsible for the majority of the flux of organic matter to higher trophic levels and the ocean interior. Photosynthetic eukaryotes evolved more than 1.5 billion years ago in the Proterozoic oceans. However, it was not until the Mesozoic Era (251 to 65 million years ago) that the three principal phytoplankton clades that would come to dominate the modern seas rose to ecological prominence. In contrast to their pioneering predecessors, the dinoflagellates, coccolithophores, and diatoms all contain plastids derived from an ancestral red alga by secondary symbiosis. Here we examine the geological, geochemical, and biological processes that contributed to the rise of these three, distantly related, phytoplankton groups.},
+author = {Falkowski, Paul G. and Katz, Miriam E. and Knoll, Andrew H. and Quigg, Antonietta and Raven, John A. and Schofield, Oscar and Taylor, F. J.R.},
+doi = {10.1126/science.1095964},
+file = {:Users/bpo/Downloads/354.full.pdf:pdf},
+issn = {00368075},
+journal = {Science},
+keywords = {Algae,Bacillariophyta,Biological evolution,Cladism,Cladisme,Dinophyta,Evoluci{\'{o}}n biol{\'{o}}gica,Evolution biologique,Filog{\'{e}}nesis,Fitoplancton,Heterokontophyta,Marine environment,Medio marino,Milieu marin,Phylogeny,Phylogen{\`{e}}se,Phytoplancton,Phytoplankton,Plastide,Simbiosis,Symbiose,Symbiosis,Thallophyta},
+mendeley-groups = {To Read!,PhD Proposal BibTex/not yet cited},
+number = {5682},
+pages = {354--360},
+title = {{The evolution of modern eukaryotic phytoplankton}},
+volume = {305},
+year = {2004}
+}
+
+
+@article{Field2009,
+abstract = {Integrating conceptually similar models of the growth of marine and terrestrial primary producers yielded an estimated global net primary production (NPP) of 104.9 petagrams of carbon per year, with roughly equal contributions from land and oceans. Approaches based on satellite indices of absorbed solar radiation indicate marked heterogeneity in NPP for both land and oceans, reflecting the influence of physical and ecological processes. The spatial and temporal distributions of ocean NPP are consistent with primary limitation by light, nutrients, and temperature. On land, water limitation imposes additional constraints. On land and ocean, progressive changes in NPP can result in altered carbon storage, although contrasts in mechanisms of carbon storage and rates of organic matter turnover result in a range of relations between carbon storage and changes in NPP.},
+author = {Field, Christopher B. and Behrenfeld, Michael J. and Randerson, James T. and Falkowski, Paul},
+doi = {10.1126/science.281.5374.237},
+file = {:Users/bpo/Downloads/237.full.pdf:pdf},
+issn = {00368075},
+journal = {Science},
+mendeley-groups = {To Read! newer stuff},
+number = {5374},
+pages = {237--240},
+title = {{Primary production of the biosphere: Integrating terrestrial and oceanic components}},
+volume = {281},
+year = {1998}
+}
+
+
 @article{Flynn2010,
 abstract = {Traditionally models of oceanic pelagic ecology, which also lay at the heart of general circulation models used for climate change simulations and of models describing coastal ecosystem dynamics have employed descriptions of plankton that assume fixed Redfield elemental compositions as inputs for rectangular-hyperbolic (Monod-type, Holling type II) descriptions of resource-limited growth and predation kinetics. The performances of Redfield-Monod and variable stoichiometric models are compared with theoretical expectations and experimental data for descriptions of multi-nutrient limited phytoplankton growth and predator-prey interactions. Serious deficiencies are revealed in Redfield-Monod implementations; such constructs have outputs and/or structural logic contrary to empirical biological knowledge. For example, Redfield-Monod models often employ nutrient limitation as a significant factor controlling phytoplankton growth, and yet biologically such nutrient limitation is associated with significant variation in elemental stoichiometry. One could argue that reliance on such dysfunctional descriptions is unacceptable, especially in an era when increasing political play is made of model simulations and predictions. Biological studies should examine the consumption and fate of all major nutrients, not just of the limiting nutrient, in order to furnish modellers with the mechanistic understanding, and data, to enable a refined description of the organisms responsible for biogeochemical cycling. Modellers, in turn, should embrace existing experimental and phenomenological observations and update their models accordingly. Simplifications in model structure can then be made from a sound knowledge base rather than by making potentially incorrect a priori assumptions. {\textcopyright} 2009 Elsevier Ltd. All rights reserved.},
 author = {Flynn, Kevin J.},
